--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Advanced Js</title>
 </head>
 <body>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/functionAreObjects.js"></script> -->
+    <script src="js/firstClassFunction.js"></script>
 </body>
 </html>
